# xxiingios

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: ios-lib.yml
android/: AndroidScanner.cpp  AndroidScanner.h  CameraScanner.cpp  CameraScanner.h  README.md
android/java/com/onecvn/addin/scanner/: ScannerOverlay.java  UiBridge.java
builder-ext/: README.md
builder-ext/src/: Configuration.xml
builder-ext/src/CommonModules/: AutoBuild_Server.xml
builder-ext/src/CommonModules/AutoBuild_Server/Ext/: Module.bsl
builder-ext/src/Ext/: ManagedApplicationModule.bsl
core/: BarcodeScannerAddIn.cpp  BarcodeScannerAddIn.h  Decoder.cpp  Decoder.h  StringUtils.cpp  StringUtils.h  exports.cpp  exports.def
ios/: IosScanner.h  IosScanner.mm  README.md  REQUIREMENTS.md
package/: ANDROID_MANIFEST_EXTENTIONS.XML  build-and-deploy.ps1  make-java.ps1  make-zip.ps1  manifest.xml
test-app/: form-test.json
test-app/cf/: Configuration.xml
test-app/cf/CommonForms/: ФормаТест.xml
test-app/cf/CommonForms/ФормаТест/Ext/: Form.xml
test-app/cf/CommonForms/ФормаТест/Ext/Form/: Module.bsl
test-app/cf/CommonTemplates/: BarcodeScannerZXing.xml
test-app/cf/Ext/: ClientApplicationInterface.xml  ManagedApplicationModule.bsl
test-app/cf/Languages/: Русский.xml
